# LearnOpenGL

./: CMakeLists.txt  README.md
include/: Shader.hpp  ShaderProgram.hpp
res/shaders/: Basic.shader  fragment.shader
src/: Shader.cpp  ShaderProgram.cpp  main.cpp
